<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">"Movies App</string>

    <!-- title view -->
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title_movies_in_theater">Movies in theater</string>

    <!-- lbl -->
    <string name="lbl_clear_all">clear all</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_empty_list_default">No result found. Please refresh the data!</string>

    <!-- label title content -->
    <string name="average_vote_title">Average vote</string>
    <string name="vote_count_title">Vote count</string>
    <string name="popularity_title">Popularity</string>
    <string name="overview_title">Overview</string>
    <string name="technical_team_title">Technical team</string>
    <string name="budget_title">Budget</string>
    <string name="revenue_title">Revenue</string>
    <string name="original_title">Original title</string>
    <string name="biography_title">Biography</string>
    <string name="genre_title">Genres</string>
    <string name="filter_title">@string/menu_filter</string>
    <string name="sorting_by_title">@string/menu_sort_by</string>
    <string name="extra_information_title">Extra information</string>
    <string name="duration_title">Duration</string>
    <string name="release_date_title">Release date</string>
    <string name="search_actor">Enter the actor name</string>

    <!-- Action bar menu item -->
    <string name="menu_filter">Filter</string>
    <string name="menu_sort_by">Sort By</string>

    <!-- Tab title -->
    <string name="tab_casting">Casting</string>
    <string name="tab_crew">Crew</string>

    <!-- Bottom Navigation -->
    <string name="bottom_movie_information">Details</string>
    <string name="bottom_movie_credits">Credits</string>
    <string name="bottom_movie_reviews">Reviews</string>

    <!-- Image content description -->
    <string name="desc_movie_poster">Movie poster image</string>
    <string name="desc_movie_backdrop">Movie backdrop image</string>
    <string name="desc_movie_duration_icon">Movie duration icon</string>
    <string name="desc_movie_vote_icon">Movie vote icon</string>
    <string name="desc_clear_all_filter">Clear all filter</string>
    <string name="desc_sorting_selected">Sorting option selected</string>
    <string name="desc_profile_image">profile image</string>

    <!-- Error messages -->
    <string name="err_unknown_identifier_provided">Unknown identifier provided, please try again</string>

    <string name="title_activity_synchronized_data">SynchronizedDataActivity</string>
    <string name="action_settings">Settings</string>

    <string name="format_movie_full_time_detail">
        <xliff:g id="hour">%1$s</xliff:g> - (<xliff:g id="v2">%2$s</xliff:g> mins)
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_loading_please_wait">Synchronization in progress please wait.</string>
    <string name="menu_search_action">Search</string>
    <string name="lbl_retry">Retry</string>
    <string name="lbl_production">Production</string>
    <string name="lbl_no_production_found">No production found!</string>
    <string name="lbl_no_castings_found">No castings found!</string>

    <!-- Formatted string -->
    <string-array name="movie_sorting_label">
        <item>Default</item>
        <item>Title</item>
        <item>Duration</item>
        <item>Release date</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="casting_sorting_label">
        <item>Default</item>
        <item>Name, desc</item>
        <item>Name, asc</item>
        <item>Character name, desc</item>
        <item>Character name, asc</item>
    </string-array>
</resources>
