<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_gravity="end"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:id="@+id/ll_filter_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/teal"
        android:padding="@dimen/padding_normal">

        <TextView
            android:id="@+id/tv_filter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/filter_title"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_clear_all"
            android:text="@string/lbl_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/iv_clear_all_filter"
            android:textAllCaps="true"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true" />

        <ImageView
            android:id="@+id/iv_clear_all_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="end"
            app:srcCompat="@drawable/ic_clear_all_white_24dp"
            android:contentDescription="@string/desc_clear_all_filter" />
    </RelativeLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_filters_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_normal" />

</LinearLayout>